--- a/lib/.index.js.hbs
+++ b/lib/.index.js.hbs
@@ -1,7 +1,7 @@
 /**
- * Pon task to compile css
- * @module pon-task-css
- * @version 1.0.1
+ * {{pkg.description}}
+ * @module {{pkg.name}}
+ * @version {{pkg.version}}
  */
 
 'use strict'
