--- a/misc/mocks/mock-pcss.pcss
+++ b/misc/mocks/mock-pcss.pcss
@@ -1,1 +1,13 @@
-:root { --red: #d33; } a { &:hover { color: color(var(--red) a(54%)); } }
+:root {
+  --red: #d33;
+}
+
+a {
+  &:hover {
+    color: color(var(--red) a(54%));
+  }
+}
+
+::placeholder {
+  color: gray;
+}
