--- a/misc/mocks/mock-pcss.pcss
+++ b/misc/mocks/mock-pcss.pcss
@@ -4,9 +4,9 @@
 
 a {
   &:hover {
-    color: color(var(--red) a(54%));
+    color: color-mod(var(--red) a(54%));
   }
-  & span{
+  & span {
     display: inline-block;
   }
 }
