--- a/misc/mocks/mock-pcss.pcss
+++ b/misc/mocks/mock-pcss.pcss
@@ -6,6 +6,7 @@ a {
   &:hover {
     color: color-mod(var(--red) a(54%));
   }
+
   & span {
     display: inline-block;
   }
@@ -13,4 +14,12 @@ a {
 
 ::placeholder {
   color: gray;
+}
+
+.hoge {
+  color: white;
+}
+
+.fuge {
+  color: green;
 }
