--- a/misc/mocks/mock-pcss.pcss
+++ b/misc/mocks/mock-pcss.pcss
@@ -18,8 +18,25 @@ a {
 
 .hoge {
   color: white;
+  background: #FF3300;
 }
 
 .fuge {
   color: green;
+}
+
+.fuge2 {
+  opacity: 1;
+
+  color: green;
+}
+
+
+.a {
+  color: #FF0100;
+  background: #F38010;
+}
+
+.b {
+  color: rgba(255, 0, 0, 1)
 }
